@@ -22,7 +22,8 @@ Minor features
 Bug fixes
 ~~~~~~~~~
 
-* Help text for StreamField is now visible and does not cover block controls (Stein Strindhaug)
+ * Help text for StreamField is now visible and does not cover block controls (Stein Strindhaug)
+ * "X minutes ago" timestamps are now marked for translation (Janneke Janssen, Matt Westcott)
 
 
 Upgrade considerations
