@@ -34,7 +34,7 @@
                                     {% endif %}
                                 </ul>
                             </td>
-                            <td valign="top"><div class="human-readable-date" title="{{ revision.created_at|date:"d M Y H:i" }}">{{ revision.created_at|timesince }} ago</div></td>
+                            <td valign="top"><div class="human-readable-date" title="{{ revision.created_at|date:"d M Y H:i" }}">{% blocktrans with time_period=revision.created_at|timesince %}{{ time_period }} ago{% endblocktrans %}</div></td>
                             <td valign="top">
                                 {% include "wagtailadmin/shared/page_status_tag.html" with page=page %}
                             </td>
